modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_const.gd
func test():
	print(c1)

const c1 = c2
const c2 = c1
